# graphics

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
src/: app_utils.rs  camera.rs  gauss.rs  graphics.rs  gui.rs  input.rs  lib.rs  lighting.rs  meshes.rs  shader.wgsl  shader_contour.wgsl  shader_gauss.wgsl  shader_ssao.wgsl  system.rs  text_overlay.rs  texture.rs  types.rs  util.rs  window.rs
