[package]
name = "graphics"
version = "0.5.3"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "A 3D rendering engine for rust programs, with GUI integration"
edition = "2024"
keywords = ["graphics", "engine", "gui", "render", "wgpu"]
categories = [
    "rendering",
    "rendering::engine",
    "graphics",
]
repository = "https://github.com/David-OConnor/graphics"
documentation = "https://docs.rs/graphics"
readme = "README.md"
license = "MIT"


[dependencies]
lin_alg = { version = "1.1.8", features = ["computer_graphics"] }

# 3D and graphics libraries. There is a degree of interdependence between them.
wgpu = "27.0.1"
winit = "0.30.11"
egui = "0.33.0"
egui-wgpu = "0.33.0"
egui-winit = "0.33.0"

pollster = "0.4.0"  # For 2 WGPU init fns that use async.
image = "0.25.2" # For loading textures
obj = "0.10.2"  # For loading OBJ meshes.
bincode = { version = "2.0.1", optional = true } # For our save/load util.


[patch.crates-io]
lin_alg = { path = "../lin_alg" }


[features]
app_utils = ["bincode", "lin_alg/bincode"]